apps/70-tools/linkwarden/base/middleware-redirect.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: linkwarden-http-redirect
  labels:
    app: linkwarden
spec:
  redirectScheme:
    scheme: https
    permanent: true
