apps/70-tools/linkwarden/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  labels:
    app: linkwarden
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: linkwarden
