apps/70-tools/linkwarden/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: linkwarden
spec:
  endpointSelector:
    matchLabels:
      app: linkwarden
  ingress:
    - fromEntities:
        - host
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
        - matchLabels:
            io.kubernetes.pod.namespace: keda
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
